Ensure the .related-post-wrap class is rendered as a block by default

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -254,6 +254,10 @@ Layers
 		padding-bottom: 1.5rem;
 	}
 
+	.related-post-wrap {
+		display: block;
+	}
+
 	.carousel {
 		margin-bottom: 1.5rem;
 
